--- a/html/dirty-flag.html
+++ b/html/dirty-flag.html
@@ -412,7 +412,7 @@ when a program receives user input and when it responds is <a href="http://en.wi
 </li>
 <li>
 <p><em>You can do more redundant work.</em> If the primary state only changes a
-    tiny amount during the timer&#x2019;s run you can end up processing a large
+    tiny amount during the timer&#x2019;s run, you can end up processing a large
     chunk of mostly unchanged data.</p>
 </li>
 <li>
