--- a/html/type-object.html
+++ b/html/type-object.html
@@ -89,7 +89,7 @@ the same way.</p>
 <p>Given that game design, we fire up our text editor and start coding.
 According to the design, a dragon <span name="isa">is a</span> kind of monster, a troll is
 another kind, and so on with the other breeds. Thinking
-object-oriented, that leads us to a Monster base class:</p>
+object-oriented, that leads us to a <code>Monster</code> base class:</p>
 <aside name="isa">
 
 <p>This is the so-called "is-a" relationship. In conventional OOP
@@ -150,7 +150,7 @@ health that is appropriate for that breed.</p>
 <p>Exclamation points make everything more exciting!</p>
 </aside>
 
-<p>Each class derived from Monster passes in the starting health, and
+<p>Each class derived from <code>Monster</code> passes in the starting health, and
 overrides <code>getAttack()</code> to return the attack string for that breed.
 Everything works as expected, and before long we&#x2019;ve got our hero
 running around slaying a variety of beasties. We keep slinging code,
@@ -200,7 +200,7 @@ string.</p>
 <p>We decided to implement this concept using inheritance, since it lines
 up with our intuition of classes: A dragon is a monster, and each
 dragon in the game is an instance of this dragon &ldquo;class.&rdquo;
-Defining each breed as a subclass of an abstract base Monster class,
+Defining each breed as a subclass of an abstract base <code>Monster</code> class,
 and having each monster in the game be an instance of that derived
 breed class mirrors that. We end up with a class hierarchy like this:</p>
 <p><span name="inherits-arrow"></span></p>
@@ -215,8 +215,8 @@ monster types. The more breeds we have, the bigger the class hierarchy. That&#x2
 adding new code, and each breed has to be compiled in as its own type.</p>
 <p>This works, but it isn&#x2019;t the only option. We could also architect our
 code so that each monster <em>has</em> a breed. Instead of subclassing
-Monster for each breed, we have a single Monster class and a single
-Breed class:</p>
+<code>Monster</code> for each breed, we have a single <code>Monster</code> class and a single
+<code>Breed</code> class:</p>
 <p><span name="references-arrow"></span></p>
 <p><img src="images/type-object-breed.png" /></p>
 <aside name="references-arrow">
@@ -226,20 +226,21 @@ Breed class:</p>
 
 <p>That&#x2019;s it. Two classes. Notice that there&#x2019;s no inheritance at all.
 With this system, each monster in the game is simply an instance of
-class Monster. The Breed class contains the information that&#x2019;s
-specific to a breed: starting health and the attack string.</p>
-<p>To associate monsters with breeds, we give each Monster instance a
-reference to a Breed object containing the information for that breed.
+class <code>Monster</code>. The <code>Breed</code> class contains the information that&#x2019;s
+shared between all monsters of the same breed: starting health and the attack string.</p>
+<p>To associate monsters with breeds, we give each <code>Monster</code> instance a
+reference to a <code>Breed</code> object containing the information for that breed.
 To get the attack string, a monster just calls a method on its breed.
-The Breed class essentially defines a monster&#x2019;s &ldquo;type.&rdquo;
-Each Breed instance is an <em>object</em> that represents a different
+The <code>Breed</code> class essentially defines a monster&#x2019;s &ldquo;type.&rdquo;
+Each breed instance is an <em>object</em> that represents a different
 conceptual <em>type</em>, hence the name of the pattern: Type Object.</p>
 <p>What&#x2019;s especially powerful about this pattern is that now we can
 define new <em>types</em> of things without complicating the codebase at all:
 we&#x2019;ve essentially lifted a portion of the type system out of the
-hard-coded class hierarchy into data we can define at runtime. We can
+hard-coded class hierarchy into data we can define at runtime.</p>
+<p>We can
 create hundreds of different breeds just by instantiating more
-instances of Breed with different values. If we create Breeds by
+instances of <code>Breed</code> with different values. If we create breeds by
 initializing them from data read from some configuration file, we have
 the ability to define new types of monsters completely in data. So
 easy a designer could do it!</p>
@@ -305,7 +306,7 @@ compiler.</p>
 <h3><a href="#it&#x2019;s-harder-to-define-behavior-for-each-type" name="it&#x2019;s-harder-to-define-behavior-for-each-type">It&#x2019;s harder to define behavior for each type</a></h3>
 <p>With subclassing, you can override a method and do whatever you want
 to: calculate values procedurally, call other code, etc. The sky is
-the limit. We could define a Monster subclass whose attack string
+the limit. We could define a monster subclass whose attack string
 changed based on the phase of the moon if we wanted to. (Handy for
 werewolves, I suppose.)</p>
 <p>When we use the Type Object pattern instead, we replace an overridden
@@ -355,10 +356,9 @@ and more sense.</p>
 </aside>
 
 <h2><a href="#sample-code" name="sample-code">Sample Code</a></h2>
-<h3><a href="#a-basic-type-object" name="a-basic-type-object">A basic type object</a></h3>
 <p>For our first pass at an implementation, let&#x2019;s start simple and build
 the basic system described in the &ldquo;Motivation&rdquo; section.
-We&#x2019;ll start with the Breed class we described:</p>
+We&#x2019;ll start with the <code>Breed</code> class:</p>
 <div class="codehilite"><pre><span class="k">class</span> <span class="nc">Breed</span>
 <span class="p">{</span>
 <span class="nl">public:</span>
@@ -378,7 +378,7 @@ We&#x2019;ll start with the Breed class we described:</p>
 
 
 <p>Very simple. It&#x2019;s basically just a container for two data fields: the
-starting health and the attack string. Let&#x2019;s see how Monster uses it:</p>
+starting health and the attack string. Let&#x2019;s see how monsters use it:</p>
 <div class="codehilite"><pre><span class="k">class</span> <span class="nc">Monster</span>
 <span class="p">{</span>
 <span class="nl">public:</span>
@@ -398,10 +398,10 @@ starting health and the attack string. Let&#x2019;s see how Monster uses it:</p>
 </pre></div>
 
 
-<p>When we construct a Monster, we give it a reference to a Breed object.
+<p>When we construct a monster, we give it a reference to a breed object.
 This defines the monster&#x2019;s breed instead of the subclasses we were
-previously using. In the constructor, Monster uses the breed to
-determine its starting health. To get the attack string, Monster
+previously using. In the constructor, <code>Monster</code> uses the breed to
+determine its starting health. To get the attack string, the monster
 simply forwards the call to its breed.</p>
 <p>This very simple chunk of code is the core idea of the pattern.
 Everything from here on out is bonus.</p>
@@ -455,14 +455,14 @@ on the class object itself.</p>
 </pre></div>
 
 
-<p>There are a couple of changes to note here. The most obvious one is
-the new <code>newMonster()</code> function in Breed. That&#x2019;s our
-&ldquo;constructor&rdquo; factory method. There are also two other
-minor changes: The real constructor in Monster is now private, and
-Breed is a friend class of Monster. These last two changes ensure that
-we can <em>only</em> create Monsters by going through <code>newMonster()</code>.</p>
-<p>The result is a relatively minor change in how monsters are created.
-With our original implementation, creating a monster looked like:</p>
+<p>The key <span name="friend">difference</span> is the <code>newMonster()</code> function in <code>Breed</code>. That&#x2019;s our
+&ldquo;constructor&rdquo; factory method. With our original implementation, creating a monster looked like:</p>
+<aside name="friend">
+
+<p>There&#x2019;s another minor difference here. Because the sample code is in C++, we can use a handy little feature: <em>friend classes.</em></p>
+<p>We&#x2019;ve made <code>Monster</code>&#x2019;s constructor private which prevents anyone from calling it directly. Friend classes sidestep that restriction so <code>Breed</code> can still access it. This means the <em>only</em> way to create monsters by going through <code>newMonster()</code>.</p>
+</aside>
+
 <div class="codehilite"><pre><span class="n">Monster</span><span class="o">*</span> <span class="n">monster</span> <span class="o">=</span> <span class="k">new</span> <span class="n">Monster</span><span class="p">(</span><span class="n">someBreed</span><span class="p">);</span>
 </pre></div>
 
@@ -473,7 +473,7 @@ With our original implementation, creating a monster looked like:</p>
 
 
 <p>So, why do this? There are two steps to creating an object: allocation
-and initialization. Monster&#x2019;s constructor lets us do all of the
+and initialization. <code>Monster</code>&#x2019;s constructor lets us do all of the
 initialization we need. In our example, that&#x2019;s only storing the breed,
 but a full game would be loading graphics, initializing the monster&#x2019;s
 AI, and doing other set-up work.</p>
@@ -483,12 +483,12 @@ called. In games, we often want to control that aspect of object
 creation too: we&#x2019;ll typically use things like custom allocators or the
 <a class="pattern" href="object-pool.html">Object Pool</a> pattern to
 control where in memory our objects end up.</p>
-<p>Defining a &ldquo;constructor&rdquo; function in Breed gives us a
+<p>Defining a &ldquo;constructor&rdquo; function in <code>Breed</code> gives us a
 place to put that logic. Instead of simply calling <code>new</code>, the
-<code>newMonster</code> function in Breed can pull the memory from a pool or
-custom heap before passing control off to Monster for initialization.
-By putting this logic inside Breed, in the <em>only</em> function that has
-the ability to create Monsters, we ensure that all monsters go through
+<code>newMonster</code> function can pull the memory from a pool or
+custom heap before passing control off to <code>Monster</code> for initialization.
+By putting this logic inside <code>Breed</code>, in the <em>only</em> function that has
+the ability to create monsters, we ensure that all monsters go through
 the memory management scheme we want.</p>
 <h3><a href="#sharing-data-through-inheritance" name="sharing-data-through-inheritance">Sharing data through inheritance</a></h3>
 <p>What we have so far is a perfectly serviceable type object system, but
