Fix #91. Reference Unity examples.

--- a/html/service-locator.html
+++ b/html/service-locator.html
@@ -805,7 +805,12 @@ be global.</p>
     looking at both to see which is most appropriate for your needs.</p>
 </li>
 <li>
-<p>Microsoft&#x2019;s <a  href="http://msdn.microsoft.com/en-us/library/microsoft.xna.framework.game.services.aspx">XNA Framework</a> for game development has this pattern
+<p>The <a href="http://unity3d.com">Unity</a> framework uses this pattern in concert
+    with the <a href="component.html" class="pattern">Component pattern</a>
+    in its <a href="http://docs.unity3d.com/412/Documentation/ScriptReference/Component.GetComponent.html?from=index"><code>GetComponent()</code></a> method.</p>
+</li>
+<li>
+<p>Microsoft&#x2019;s <a  href="http://msdn.microsoft.com/en-us/library/microsoft.xna.framework.game.services.aspx">XNA</a> framework for game development has this pattern
     built into its core <code>Game</code> class. Each instance has a
     <code>GameServices</code> object that can be used to register and locate
     services of any type.</p>
