--- a/html/update-method.html
+++ b/html/update-method.html
@@ -516,7 +516,10 @@
 <p>When you start caring about the cache performance of updating a bunch of entities or components in a loop each frame, the <a href="data-locality.html" class="pattern">Data Locality</a> pattern can help make that faster.</p>
 </li>
 <li>
-<p>Microsoft&#x2019;s XNA platform uses this pattern both in the <a href="http://msdn.microsoft.com/en-us/library/microsoft.xna.framework.game.update.aspx"><code>Game</code></a> and <a href="http://msdn.microsoft.com/en-us/library/microsoft.xna.framework.gamecomponent.update.aspx"><code>GameComponent</code></a> classes.</p>
+<p>The <a href="http://unity3d.com">Unity</a> framework uses this pattern in several classes, including <a href="http://docs.unity3d.com/Documentation/ScriptReference/MonoBehaviour.Update.html"><code>MonoBehaviour</code></a>.</p>
+</li>
+<li>
+<p>Microsoft&#x2019;s <a href="http://creators.xna.com/en-US/">XNA</a> platform uses this pattern both in the <a href="http://msdn.microsoft.com/en-us/library/microsoft.xna.framework.game.update.aspx"><code>Game</code></a> and <a href="http://msdn.microsoft.com/en-us/library/microsoft.xna.framework.gamecomponent.update.aspx"><code>GameComponent</code></a> classes.</p>
 </li>
 <li>
 <p>The <a href="http://html5quintus.com/">Quintus</a> JavaScript game engine uses this pattern on its main <a href="http://html5quintus.com/guide/sprites.md"><code>Sprite</code></a> class.</p>
