--- a/html/data-locality.html
+++ b/html/data-locality.html
@@ -500,7 +500,7 @@ some more boxes that are next to it. He doesn&#x2019;t know if you want those (a
 
 <span class="nl">private:</span>
   <span class="n">Animation</span><span class="o">*</span> <span class="n">animation_</span><span class="p">;</span>
-  <span class="kt">float</span>      <span class="n">energy_</span><span class="p">;</span>
+  <span class="kt">double</span>     <span class="n">energy_</span><span class="p">;</span>
   <span class="n">Vector</span>     <span class="n">goalPos_</span><span class="p">;</span>
 <span class="p">};</span>
 </pre></div>
@@ -517,7 +517,7 @@ some more boxes that are next to it. He doesn&#x2019;t know if you want those (a
   <span class="n">LootType</span> <span class="n">drop_</span><span class="p">;</span>
   <span class="kt">int</span>      <span class="n">minDrops_</span><span class="p">;</span>
   <span class="kt">int</span>      <span class="n">maxDrops_</span><span class="p">;</span>
-  <span class="kt">float</span>    <span class="n">chanceOfDrop_</span><span class="p">;</span>
+  <span class="kt">double</span>   <span class="n">chanceOfDrop_</span><span class="p">;</span>
 <span class="p">};</span>
 </pre></div>
 
@@ -531,7 +531,7 @@ some more boxes that are next to it. He doesn&#x2019;t know if you want those (a
   <span class="c1">// Methods...</span>
 <span class="nl">private:</span>
   <span class="n">Animation</span><span class="o">*</span>   <span class="n">animation_</span><span class="p">;</span>
-  <span class="kt">float</span>        <span class="n">energy_</span><span class="p">;</span>
+  <span class="kt">double</span>       <span class="n">energy_</span><span class="p">;</span>
   <span class="n">Vector</span>       <span class="n">goalPos_</span><span class="p">;</span>
 
   <span class="n">LootDrop</span><span class="o">*</span>    <span class="n">loot_</span><span class="p">;</span>
@@ -543,7 +543,7 @@ some more boxes that are next to it. He doesn&#x2019;t know if you want those (a
   <span class="n">LootType</span> <span class="n">drop_</span><span class="p">;</span>
   <span class="kt">int</span> <span class="n">minDrops_</span><span class="p">;</span>
   <span class="kt">int</span> <span class="n">maxDrops_</span><span class="p">;</span>
-  <span class="kt">float</span> <span class="n">chanceOfDrop_</span><span class="p">;</span>
+  <span class="kt">double</span> <span class="n">chanceOfDrop_</span><span class="p">;</span>
 <span class="p">};</span>
 </pre></div>
 
