Work on second draft of Bytecode.

--- a/html/subclass-sandbox.html
+++ b/html/subclass-sandbox.html
@@ -149,7 +149,7 @@ but I find <em>wide</em> inheritance trees to be easier to work with than <em>de
 </aside>
 
 <h2><a href="#the-pattern" name="the-pattern">The Pattern</a></h2>
-<p>The <strong>base class</strong> defines an abstract <strong>sandbox method</strong>, and several
+<p>A <strong>base class</strong> defines an abstract <strong>sandbox method</strong> and several
 <strong>provided operations</strong>. Marking them protected makes it clear to a user that
 they are for use by derived classes. Each derived <strong>sandboxed subclass</strong>
 implements the sandbox method using the provided operations.</p>
