Link to Bytecode in index.

--- a/html/index.html
+++ b/html/index.html
@@ -78,7 +78,7 @@
   </li>
   <li>Behavioral Patterns
     <ul>
-      <li>Bytecode <em>(not written yet)</em></li>
+      <li><a href="bytecode.html">Bytecode</a></em></li>
       <li><a href="subclass-sandbox.html">Subclass Sandbox</a></li>
       <li><a href="type-object.html">Type Object</a></li>
     </ul>
